# DuplicateTaskEvaluationV2

./: CLAUDE.md  GUIDE.md  README.md  config.yaml  pyproject.toml  requirements.txt
duptool/: __init__.py  __main__.py  candidates.py  clean.py  ingest.py  models.py  report.py  scoring.py  signals.py
duptool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_clean.py  test_eval.py  test_ingest.py  test_report.py  test_scoring.py  test_signals.py
tests/fixtures/: labelled_pairs.csv  sample_tickets.csv
