[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "duptool"
version = "0.1.0"
description = "Offline, read-only duplicate-task suggestion tool for ADO CSV exports"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "pydantic>=2.0",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Optional local-embedding signal ONLY. The core pipeline must never require these.
semantic = ["sentence-transformers", "torch"]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["duptool*"]
